样式分离一下

--- a/index.html
+++ b/index.html
@@ -5,111 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        ol,
-        ul,
-        li {
-            list-style: none;
-        }
-
-        .box {
-            /* 只是为了让轮播的大盒子在页面中间，实际随意 */
-            position: relative;
-            left: 50%;
-            transform: translateX(-50%);
-            /* 盒子要给个高度 */
-            width: 600px;
-            height: 400px;
-            border: solid 1px black;
-            /* overflow: hidden; */
-        }
-
-        .box > ul {
-            /* width: 600%; 5张图片就是600*5 600% */
-            /* 通过控制这个-16.66%的几倍数来达到移动的效果 */
-            /* transform: translateX(-16.66%); */
-            /* transition: tansform .5s ease 0s; */
-        }
-
-        .box>ul>li {
-            float: left;
-            /* 每张600px */
-            width: 14.29%; /* 5张图就是1/7 16.66% 5张图片（最后一张会被复制1/6），每张占600%的1份 */
-            height: 400px;
-            background-color: pink;
-            /* border-left: 1px solid black; */
-            line-height: 400px;
-            text-align: center;
-            font-size: 100px;
-        }
-
-        .box>ul>li>img {
-            width: 100%;
-        }
-
-        .box > a {
-            position: absolute;
-            /* 绝对定位的盒子垂直居中 */
-            top: 50%;
-            margin-top: -15px;
-            width: 20px;
-            height: 30px;
-            background: rgba(34, 24, 24, 0.3);
-            text-align: center;
-            /* 文字水平居中 */
-            line-height: 30px;
-            /* 文字垂直居中，行高与元素高度一样 */
-            color: #fff;
-            text-decoration: none;
-            
-        }
-
-        .prev {
-            left: 0;
-            border-radius: 0px 15px 15px 0px;
-        }
-
-        .next {
-            right: 0;
-            border-radius: 15px 0px 0px 15px;
-        }
-        .prev:hover,
-        .next:hover {
-            color:orange
-        }
-        /* 小圆点 */
-        .box>ol {
-            /* z-index: 999999; */
-            position: absolute;
-            bottom: 15px;
-            left: 50%;
-            margin-left: -35px;
-            /* width: 70px; */
-            height: 13px;
-            /* background-color: pink; */
-            background: rgba(z55, 255, 255, .7);
-            border-radius: 7px;
-        }
-
-        .box>ol > li {
-            float: left;
-            width: 8px;
-            height: 8px;
-            background-color: #fff;
-            border-radius: 50%;
-            margin: 3px;
-        }
-
-        /* 不要忘记选择器权重的问题 */
-        .box>ol > li.selected {
-            background-color: #ff5000;
-        }
-    </style>
+<link rel="stylesheet" href="swiper.css">
 </head>
 
 <body>
