增加鼠标移入停止轮轮播，移出继继续

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<link rel="stylesheet" href="swiper.css">
+    <link rel="stylesheet" href="swiper.css">
 </head>
 
 <body>
@@ -31,9 +31,10 @@
 </body>
 <script src="swiper.js"></script>
 <script>
-    let w1=new Swiper('.box',{
-        autoplay: true,
-        time: 3
+    let w1 = new Swiper('.box', {
+        autoplay: false,
+        time: 1
     })
 </script>
+
 </html>
