设置节流锁

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <script src="swiper.js"></script>
 <script>
     let w1 = new Swiper('.box', {
-        autoplay: false,
+        autoplay: true,
         time: 1
     })
 </script>
